--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,10 +1,12 @@
+
+echo blank
 name: CI
 
 on: [push]
 
 jobs:
   build:
-
+  
     runs-on: ubuntu-latest
 
     steps:
@@ -15,3 +17,6 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+        echo samofsams
+
+
