--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,6 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-        echo samofsams
+        echo samofsams, this line is wrong!! coreect it!
 
 
