you are fired , garbage collector of Hades

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,5 +18,7 @@ jobs:
         echo Add other actions to build,
         echo test, and deploy your project.
         echo samofsams, this line is wrong!! coreect it!
+        echo oh really, you think so stoopiid!!!
+        
 
 
